Protocol alignment fixes [SCI-6988] (#4259)
* Fix rendering protocol steps

* Fix empty space for step text [SCI-6988]

* Align step number and step name [SCI-6988]

* Align step number and step name [SCI-6988]

--- a/app/assets/stylesheets/steps/step.scss
+++ b/app/assets/stylesheets/steps/step.scss
@@ -245,6 +245,7 @@
   .step-controls {
     display: flex;
     align-items: center;
+    min-height: 35px;
   }
 
   .sci-inline-edit {
